<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Local Messenger</string>
    <string name="team_name">Code Runners</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_chat">Create a Chat</string>
	<string name="inbox_name">Name</string>
	<string name="inbox_post">Post</string>
	<string name="inbox_distance">Distance</string>
	<string name="inbox_time">Time</string>
	<string name="inbox_replies">Replies</string>
	<string name="message_prompt">Enter a message&#8230;</string>
	<string name="title_prompt">Enter a title&#8230;</string>
	<string name="name_prompt">Enter a name&#8230;</string>
	<string name="button_send">Send</string>
    <string name="button_submit">Submit</string>
    <string name="button_cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="tags">Tags</string>
    <string name="name">Name</string>
    <string name="settings_title">Settings</string>
    <string name="chat_creation_title">Create a Chat</string>
    <string name="end_time">End Time</string>
    <string name="notifications">Notifications</string>
    <string name="notification_none">None</string>
    <string name="notification_created">Created</string>
    <string name="notification_replied">Replied</string>
    <string name="notification_read">Read</string>
    <string name="notification_all">All</string>
    <string name="unknown_user_name">Anonymous</string>
    <string name="http_request_failure_rejected">rejected by server</string>
    <string name="http_request_failure_timeout">server timed out</string>
    <string name="http_request_failure_no_response">no response from server</string>
    <string name="http_request_failure_unknown">unknown cause</string>
    <string name="http_data_descriptor_response">response</string>
    <string name="http_data_descriptor_new_messages">new messages</string>
    <string name="http_data_descriptor_new_inbox">new inbox data</string>
    <string name="http_data_descriptor_tags">tags</string>
    <string name="filter">Filter Tags</string>
    
    
	
</resources>
