<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/button_cancel"
            android:onClick="onCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/button_submit"
            android:onClick="onSubmit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/button_submit" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/button_bar" >
    
	   <LinearLayout
	        android:id="@+id/linearLayout1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >

	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="16dp"
	            android:layout_marginRight="16dp"
	            android:layout_marginTop="14dp"
	            android:text="@string/title"
	            android:textAppearance="?android:attr/textAppearanceLarge" />

	        <EditText
	            android:id="@+id/edit_title"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="16dp"
	            android:layout_marginRight="16dp"
	            android:ems="10"
	            android:hint="@string/title_prompt"
	            android:inputType="textMultiLine" />

	        <TextView
	            android:id="@+id/TextView01"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="16dp"
	            android:layout_marginRight="16dp"
	            android:layout_marginTop="14dp"
	            android:text="@string/message"
	            android:textAppearance="?android:attr/textAppearanceLarge" />

	        <EditText
	            android:id="@+id/edit_message"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="16dp"
	            android:layout_marginRight="16dp"
	            android:ems="10"
	            android:hint="@string/message_prompt"
	            android:inputType="textMultiLine" />
	        
	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="16dp"
	            android:layout_marginRight="16dp"
	            android:layout_marginTop="14dp"
	            android:text="@string/tags"
	            android:textAppearance="?android:attr/textAppearanceLarge" />

	        <LinearLayout
	            android:id="@+id/tags_list"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="16dp"
	            android:layout_marginRight="16dp"
	            android:orientation="vertical" >

	        </LinearLayout>

	    </LinearLayout>
    
    </ScrollView>

</RelativeLayout>